cmake_minimum_required(VERSION 3.5)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/anagram)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/classroom)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/csv)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/diamonds_in_the_sky)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dirty_bills)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/fibonacci)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/functional_anarchy)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/inheritance)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/palindrome)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/stairway_to_heaven)
